# CloudFerry

./: .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  ExampleTasks.py  FileLikeProxy.py  HACKING.md  MANIFEST.in  QUICKSTART.md  README.md  Scheduler.py  SuperTask.py  Task.py  TaskExportResource.py  TaskInitMigrate.py  cfglib.py  cloudferry.py  config.py  config.yaml  config_ceph_ephem_to_ceph.yaml  config_ceph_ephem_to_ceph_ephem.yaml  config_ceph_ephem_to_iscsi.yaml  config_ceph_to_ceph.yaml  config_ceph_to_ceph_ephem.yaml  config_ceph_to_iscsi.yaml  config_description.txt  config_iscsi_to_ceph.yaml  config_iscsi_to_ceph_ephem.yaml  config_iscsi_to_iscsi.yaml  data_storage.py  discover.yaml  email.html  fabfile.py  osBuilderExporter.py  osBuilderImporter.py  osCommon.py  osExporter.py  osImageTransfer.py  osImporter.py  osResourceTransfer.py  (+11 more)
cloud/: Cloud.py  CloudFerry.py  Os2OsFerry.py  __init__.py  cloud.py  cloud_ferry.py  grouping.py  os2os.py
cloudferry/: __init__.py  cfglib.py  config.py  data_storage.py  discover.py  fabfile.py
cloudferry_devlab/: .rubocop.yaml  LICENSE  README.md  Vagrantfile  config.ini  config.template  requirements.txt  setup.py
cloudferrylib/: __init__.py  config.py  stage.py
condensation/: action.py  cloud.py  flavor.py  node.py  process.py  utils.py  vm.py
configs/: availability_zone_mapping.yaml  config.ini  config_ceph_ephem_to_ceph.yaml  config_ceph_ephem_to_ceph_ephem.yaml  config_ceph_ephem_to_iscsi.yaml  config_ceph_to_ceph.yaml  config_ceph_to_ceph_ephem.yaml  config_ceph_to_iscsi.yaml  config_iscsi_to_ceph.yaml  config_iscsi_to_ceph_ephem.yaml  config_iscsi_to_iscsi.yaml  discover.yaml  ext_net_map.yaml  filter.yaml  groups.yaml  logging_config.yaml  migrate.yaml  override_rules.yaml  resource_map.yaml  tasks.yaml
devlab/: README.md  Vagrantfile  config.ini  config.template  generate_load.py
docs/: CloudFerry_Beginner_Demo_How-To.md  CloudFerry_Brochure.tex  Makefile  README  autotests.rst  conf.py  configuration.rst  glance_image_migration.rst  index.rst  installation.rst  nova_compute_migration.rst  overview.rst  quick_start_guide.rst
dry_run/: chain.py
evacuation/: evacuation_chain.py
make_filters/: make_filters.py
migrationlib/: __init__.py
plugins/: __init__.py
punky_gibbon/: setup.py  (+1 more)
(+867 files in other folders)
