[metadata]
name = CloudFerry
author = Mirantis Inc.
author-email = workloadmobility@mirantis.com
summary = Openstack cloud workload migration tool
description-file =
    README.md
home-page = https://github.com/MirantisWorkloadMobility/CloudFerry
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    cloudferry

[entry_points]
console_scripts =
    cloudferry = cloudferry.cli.shell:main
oslo.config.opts =
    cloudferry = cloudferry.cfglib:list_opts
cloudferry =
    migrate = cloudferry.cli.v1.commands:Migrate
    migrate2 = cloudferry.cli.v2.commands:Migrate
    discover = cloudferry.cli.v2.commands:Discover
    link = cloudferry.cli.v2.commands:Link
    estimate-migration = cloudferry.cli.v2.commands:EstimateMigration
    show-objects = cloudferry.cli.v2.commands:ShowObjects

# Nosetest configuration
[nosetests]
verbosity=3
with-xunit=1

# Sphinx configuration
[build_sphinx]
source-dir = docs
build-dir  = sphinx-build
all_files  = 1
