[metadata]
name = CloudFerry
author = Mirantis Inc.
author-email = workloadmobility@mirantis.com
summary = Openstack cloud workload migration tool
description-file =
    README.md
home-page = https://github.com/MirantisWorkloadMobility/CloudFerry
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    cloudferry

[entry_points]
console_scripts =
    cloudferry = cloudferry.bin.main:main
oslo.config.opts =
    cloudferry = cloudferry.cfglib:list_opts

# Nosetest configuration
[nosetests]
verbosity=3
with-xunit=1

# Sphinx configuration
[build_sphinx]
source-dir = docs
build-dir  = sphinx-build
all_files  = 1
